--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/lexora-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lexora - AI-Powered Learning Platform</title>
     <meta name="description" content="Guided by AI. Powered by You. Personalized narrated lessons with AI-generated content." />
