Ensure Consistent Lexora Logo Usage Throughout Application

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lexora - AI-Powered Learning Platform</title>
     <meta name="description" content="Guided by AI. Powered by You. Personalized narrated lessons with AI-generated content." />
+    <meta property="og:title" content="Lexora - AI-Powered Learning Platform" />
+    <meta property="og:description" content="Guided by AI. Powered by You. Personalized narrated lessons with AI-generated content." />
+    <meta property="og:image" content="/lexora-logo.png" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Lexora - AI-Powered Learning Platform" />
+    <meta name="twitter:description" content="Guided by AI. Powered by You. Personalized narrated lessons with AI-generated content." />
+    <meta name="twitter:image" content="/lexora-logo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
